# drone_programs

drone_test/: README.md  readmee.md
drone_test/docs/: NOTLAR.MD
drone_test/src/: mission_red_search.py  simple_takeoff.py
red_drone_demo/: README.md  package.xml  setup.cfg  setup.py
red_drone_demo/launch/: red_search.launch.py
red_drone_demo/red_drone_demo/: drone_brain_node.py  mavlink_iface_node.py  red_finder_node.py
red_drone_demo/resource/: red_drone_demo
red_drone_demo/test/: test_nodes.py
