<?xml version="1.0"?>
<package format="3">
  <name>red_drone_demo</name>
  <version>0.0.1</version>
  <description>ArduPilot SITL + Gazebo + ROS2 + OpenCV kırmızı arama demo</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>