[metadata]
name = red_drone_demo
version = 0.1.0
description = A package for controlling a drone with red object detection capabilities.
author = İclal Kaçar
maintainer = İclal Kaçar
license = MIT

[options]
packages = find:
install_requires =
    rospy
    mavros
    opencv-python

[options.packages.find]
where = red_drone_demo

[options.entry_points]
console_scripts =
    drone_brain_node = red_drone_demo.drone_brain_node:main
    mavlink_iface_node = red_drone_demo.mavlink_iface_node:main
    red_finder_node = red_drone_demo.red_finder_node:main